# playwright-ai-py

./: README.md  main.py  pyproject.toml
src/: action.py  auto.py  helper.py  open_ai_client.py
src/constants/: function_call.py
