[tool.poetry]
name = "playwright-ai-py"
version = "0.1.0"
description = ""
authors = ["Nicholas Frederich <nicholas.frederich.lagaunne@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.53.0"
playwright = "^1.48.0"
html-sanitizer = "^2.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
